@@ -2,17 +2,20 @@ package org.cswteams.ms3.config;
 
 import lombok.SneakyThrows;
 import org.cswteams.ms3.control.preferenze.IHolidayController;
+import org.cswteams.ms3.control.task.TaskController;
+import org.cswteams.ms3.control.user.UserController;
+import org.cswteams.ms3.entity.*;
+import org.cswteams.ms3.entity.condition.*;
+import org.cswteams.ms3.entity.constraint.*;
 import org.cswteams.ms3.entity.scocciature.Scocciatura;
 import org.cswteams.ms3.entity.scocciature.ScocciaturaAssegnazioneUtente;
 import org.cswteams.ms3.entity.scocciature.ScocciaturaDesiderata;
-import org.cswteams.ms3.entity.scocciature.ScocciaturaVacanza;
-import org.cswteams.ms3.entity.vincoli.VincoloMaxOrePeriodo;
 import org.cswteams.ms3.dao.*;
-import org.cswteams.ms3.dto.HolidayDTO;
-import org.cswteams.ms3.entity.*;
-import org.cswteams.ms3.entity.vincoli.*;
-import org.cswteams.ms3.enums.*;
-import org.cswteams.ms3.exception.TurnoException;
+import org.cswteams.ms3.enums.Seniority;
+import org.cswteams.ms3.enums.SystemActor;
+import org.cswteams.ms3.enums.TaskEnum;
+import org.cswteams.ms3.enums.TimeSlot;
+import org.cswteams.ms3.exception.ShiftException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.ApplicationListener;
@@ -35,105 +38,117 @@ public class ApplicationStartup implements ApplicationListener<ApplicationReadyE
      */
 
     @Autowired
-    private UtenteDao utenteDao;
+    private DoctorDAO doctorDAO;
 
     @Autowired
-    private TurnoDao turnoDao;
+    private ShiftDAO shiftDAO;
 
     @Autowired
-    private ServizioDao servizioDao;
+    private MedicalServiceDAO medicalServiceDAO;
 
     @Autowired
-    private CategoriaUtenteDao categoriaUtenteDao;
+    private PermanentConditionDAO permanentConditionDAO;
 
     @Autowired
-    private CategorieDao categoriaDao;
+    private TemporaryConditionDAO temporaryConditionDAO;
+
+    @Autowired
+    private SpecializationDAO specializationDAO;
 
     @Autowired
     private IHolidayController holidayController;
 
     @Autowired
-    private VincoloDao vincoloDao;
+    private ConstraintDAO constraintDAO;
 
     @Autowired
-    private ScocciaturaDao scocciaturaDao;
-    @Autowired
-    private DesiderataDao desiderataDao;
+    private TaskDAO taskDAO;
 
     @Autowired
-    private ConfigVincoliDao configVincoliDao;
+    private ScocciaturaDAO scocciaturaDAO;
+  
+    @Autowired
+    private PreferenceDAO preferenceDao;
 
     @Autowired
-    private ConfigVincoloMaxPeriodoConsecutivoDao configVincoloMaxPeriodoConsecutivoDao;
+    private ConfigVincoliDAO configVincoliDAO;
+
+    @Autowired
+    private ConfigVincoloMaxPeriodoConsecutivoDAO configVincoloMaxPeriodoConsecutivoDAO;
 
 
     @SneakyThrows
     @Override
     public void onApplicationEvent(ApplicationReadyEvent applicationReadyEvent) {
-        
+
         /**
          * FIXME: sostiutire count con controllo su entità Config
          */
-        if (utenteDao.count() == 0) {
-            populateDB();
-            registerConstraints();
+        if (doctorDAO.count() == 0) {
+            try {
+                populateDB();
+            } catch (ShiftException e) {
+                e.printStackTrace();
+            }
+
+            //registerConstraints();
             registerScocciature();
         }
-        
+
     }
 
     private void registerScocciature() {
-        int pesoDesiderata= 100;
+        int pesoDesiderata = 100;
 
-        int pesoDomenicaPomeriggio=20;
-        int pesoDomenicaMattina=20;
-        int pesoSabatoNotte=20;
+        int pesoDomenicaPomeriggio = 20;
+        int pesoDomenicaMattina = 20;
+        int pesoSabatoNotte = 20;
 
-        int pesoSabatoPomeriggio=15;
-        int pesoSabatoMattina=15;
-        int pesoVenerdiNotte=15;
-        int pesoDomenicaNotte=15;
+        int pesoSabatoPomeriggio = 15;
+        int pesoSabatoMattina = 15;
+        int pesoVenerdiNotte = 15;
+        int pesoDomenicaNotte = 15;
 
-        int pesoVenerdiPomeriggio=10;
+        int pesoVenerdiPomeriggio = 10;
 
-        int pesoFerialeSemplice=5;
-        int pesoFerialeNotturno=10;
+        int pesoFerialeSemplice = 5;
+        int pesoFerialeNotturno = 10;
 
-        Scocciatura scocciaturaDomenicaMattina = new ScocciaturaAssegnazioneUtente(pesoDomenicaMattina,DayOfWeek.SUNDAY,TipologiaTurno.MATTUTINO);
-        Scocciatura scocciaturaDomenicaPomeriggio = new ScocciaturaAssegnazioneUtente(pesoDomenicaPomeriggio,DayOfWeek.SUNDAY,TipologiaTurno.POMERIDIANO);
-        Scocciatura scocciaturaDomenicaNotte = new ScocciaturaAssegnazioneUtente(pesoDomenicaNotte,DayOfWeek.SUNDAY,TipologiaTurno.NOTTURNO);
+        Scocciatura scocciaturaDomenicaMattina = new ScocciaturaAssegnazioneUtente(pesoDomenicaMattina, DayOfWeek.SUNDAY, TimeSlot.MORNING);
+        Scocciatura scocciaturaDomenicaPomeriggio = new ScocciaturaAssegnazioneUtente(pesoDomenicaPomeriggio, DayOfWeek.SUNDAY, TimeSlot.AFTERNOON);
+        Scocciatura scocciaturaDomenicaNotte = new ScocciaturaAssegnazioneUtente(pesoDomenicaNotte, DayOfWeek.SUNDAY, TimeSlot.NIGHT);
 
-        Scocciatura scocciaturaSabatoMattina = new ScocciaturaAssegnazioneUtente(pesoSabatoMattina,DayOfWeek.SATURDAY,TipologiaTurno.MATTUTINO);
-        Scocciatura scocciaturaSabatoPomeriggio = new ScocciaturaAssegnazioneUtente(pesoSabatoPomeriggio,DayOfWeek.SATURDAY,TipologiaTurno.POMERIDIANO);
-        Scocciatura scocciaturaSabatoNotte = new ScocciaturaAssegnazioneUtente(pesoSabatoNotte,DayOfWeek.SATURDAY,TipologiaTurno.NOTTURNO);
+        Scocciatura scocciaturaSabatoMattina = new ScocciaturaAssegnazioneUtente(pesoSabatoMattina, DayOfWeek.SATURDAY, TimeSlot.MORNING);
+        Scocciatura scocciaturaSabatoPomeriggio = new ScocciaturaAssegnazioneUtente(pesoSabatoPomeriggio, DayOfWeek.SATURDAY, TimeSlot.AFTERNOON);
+        Scocciatura scocciaturaSabatoNotte = new ScocciaturaAssegnazioneUtente(pesoSabatoNotte, DayOfWeek.SATURDAY, TimeSlot.NIGHT);
 
-        Scocciatura scocciaturaVenerdiPomeriggio = new ScocciaturaAssegnazioneUtente(pesoVenerdiPomeriggio,DayOfWeek.FRIDAY,TipologiaTurno.POMERIDIANO);
-        Scocciatura scocciaturaVenerdiNotte = new ScocciaturaAssegnazioneUtente(pesoVenerdiNotte,DayOfWeek.FRIDAY,TipologiaTurno.NOTTURNO);
+        Scocciatura scocciaturaVenerdiPomeriggio = new ScocciaturaAssegnazioneUtente(pesoVenerdiPomeriggio, DayOfWeek.FRIDAY, TimeSlot.AFTERNOON);
+        Scocciatura scocciaturaVenerdiNotte = new ScocciaturaAssegnazioneUtente(pesoVenerdiNotte, DayOfWeek.FRIDAY, TimeSlot.NIGHT);
 
         Scocciatura scocciaturaDesiderata = new ScocciaturaDesiderata(pesoDesiderata);
 
-        scocciaturaDao.save(scocciaturaDomenicaPomeriggio);
-        scocciaturaDao.save(scocciaturaDomenicaMattina);
-        scocciaturaDao.save(scocciaturaDomenicaNotte);
+        scocciaturaDAO.save(scocciaturaDomenicaPomeriggio);
+        scocciaturaDAO.save(scocciaturaDomenicaMattina);
+        scocciaturaDAO.save(scocciaturaDomenicaNotte);
 
-        scocciaturaDao.save(scocciaturaSabatoMattina);
-        scocciaturaDao.save(scocciaturaSabatoPomeriggio);
-        scocciaturaDao.save(scocciaturaSabatoNotte);
+        scocciaturaDAO.save(scocciaturaSabatoMattina);
+        scocciaturaDAO.save(scocciaturaSabatoPomeriggio);
+        scocciaturaDAO.save(scocciaturaSabatoNotte);
 
-        scocciaturaDao.save(scocciaturaVenerdiPomeriggio);
-        scocciaturaDao.save(scocciaturaVenerdiNotte);
+        scocciaturaDAO.save(scocciaturaVenerdiPomeriggio);
+        scocciaturaDAO.save(scocciaturaVenerdiNotte);
 
-        scocciaturaDao.save(scocciaturaDesiderata);
+        scocciaturaDAO.save(scocciaturaDesiderata);
 
-        List<DayOfWeek> giorniFeriali = Arrays.asList(DayOfWeek.MONDAY,DayOfWeek.TUESDAY,DayOfWeek.WEDNESDAY,DayOfWeek.THURSDAY,DayOfWeek.FRIDAY);
-        for(DayOfWeek giornoFeriale: giorniFeriali){
-            ScocciaturaAssegnazioneUtente scocciaturaFerialeMattina = new ScocciaturaAssegnazioneUtente(pesoFerialeSemplice,giornoFeriale,TipologiaTurno.MATTUTINO);
-            scocciaturaDao.save(scocciaturaFerialeMattina);
-            if(giornoFeriale != DayOfWeek.FRIDAY){
-                ScocciaturaAssegnazioneUtente scocciaturaFerialePomeriggio = new ScocciaturaAssegnazioneUtente(pesoFerialeSemplice,giornoFeriale,TipologiaTurno.POMERIDIANO);
-                scocciaturaDao.save(scocciaturaFerialePomeriggio);
-                ScocciaturaAssegnazioneUtente scocciaturaFerialeNotturno = new ScocciaturaAssegnazioneUtente(pesoFerialeNotturno,giornoFeriale,TipologiaTurno.NOTTURNO);
-                scocciaturaDao.save(scocciaturaFerialeNotturno);
+        List<DayOfWeek> giorniFeriali = Arrays.asList(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY);
+        for (DayOfWeek giornoFeriale : giorniFeriali) {
+            ScocciaturaAssegnazioneUtente scocciaturaFerialeMattina = new ScocciaturaAssegnazioneUtente(pesoFerialeSemplice, giornoFeriale, TimeSlot.MORNING);
+            scocciaturaDAO.save(scocciaturaFerialeMattina);
+            if (giornoFeriale != DayOfWeek.FRIDAY) {
+                ScocciaturaAssegnazioneUtente scocciaturaFerialePomeriggio = new ScocciaturaAssegnazioneUtente(pesoFerialeSemplice, giornoFeriale, TimeSlot.AFTERNOON);
+                scocciaturaDAO.save(scocciaturaFerialePomeriggio);
+                ScocciaturaAssegnazioneUtente scocciaturaFerialeNotturno = new ScocciaturaAssegnazioneUtente(pesoFerialeNotturno, giornoFeriale, TimeSlot.NIGHT);
+                scocciaturaDAO.save(scocciaturaFerialeNotturno);
             }
         }
     }
@@ -147,10 +162,10 @@ public class ApplicationStartup implements ApplicationListener<ApplicationReadyE
             Properties prop = new Properties();
             prop.load(propsInput);
 
-            ConfigVincoloMaxPeriodoConsecutivo confOver62 = new ConfigVincoloMaxPeriodoConsecutivo(categoriaDao.findAllByNome("OVER_62"),Integer.parseInt(prop.getProperty("numMaxOreConsecutiveOver62"))*60);
-            ConfigVincoloMaxPeriodoConsecutivo confIncinta = new ConfigVincoloMaxPeriodoConsecutivo(categoriaDao.findAllByNome("INCINTA"),Integer.parseInt(prop.getProperty("numMaxOreConsecutiveDonneIncinta"))*60);
-            configVincoloMaxPeriodoConsecutivoDao.saveAndFlush(confOver62);
-            configVincoloMaxPeriodoConsecutivoDao.saveAndFlush(confIncinta);
+            ConfigVincMaxPerCons confOver62 = new ConfigVincMaxPerCons(permanentConditionDAO.findByType("OVER_62"),Integer.parseInt(prop.getProperty("numMaxOreConsecutiveOver62"))*60);
+            ConfigVincMaxPerCons confIncinta = new ConfigVincMaxPerCons(temporaryConditionDAO.findByType("INCINTA"),Integer.parseInt(prop.getProperty("numMaxOreConsecutiveDonneIncinta"))*60);
+            configVincoloMaxPeriodoConsecutivoDAO.saveAndFlush(confOver62);
+            configVincoloMaxPeriodoConsecutivoDAO.saveAndFlush(confIncinta);
             configVincoli = new ConfigVincoli(
                     Integer.parseInt(prop.getProperty("numGiorniPeriodo")),
                     Integer.parseInt(prop.getProperty("maxOrePeriodo")) * 60,
@@ -158,267 +173,365 @@ public class ApplicationStartup implements ApplicationListener<ApplicationReadyE
                     Integer.parseInt(prop.getProperty("numMaxOreConsecutivePerTutti")) * 60,
                     Arrays.asList(confOver62,confIncinta)
             );
-            configVincoliDao.save(configVincoli);
+            configVincoliDAO.save(configVincoli);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
 
         // nessun turno può essere allocato a questa persona durante il suo smonto notte
-        VincoloTipologieTurniContigue vincoloTurniContigui = new VincoloTipologieTurniContigue(
+        ConstraintTipologieTurniContigue vincoloTurniContigui = new ConstraintTipologieTurniContigue(
             configVincoli.getHorizonTurnoNotturno(),
             ChronoUnit.HOURS,
-            TipologiaTurno.NOTTURNO,
-            new HashSet<>(Arrays.asList(TipologiaTurno.values()))
-            );
+            TimeSlot.NIGHT,
+            new HashSet<>(Arrays.asList(TimeSlot.values()))
+        );
+        vincoloTurniContigui.setViolable(true);
 
+        //Constraint vincolo1 = new ConstraintCategorieUtenteTurno();
+        Constraint vincolo2 = new ConstraintMaxPeriodoConsecutivo(configVincoli.getNumMaxMinutiConsecutiviPerTutti());
+        Constraint vincolo4 = new ConstraintMaxOrePeriodo(configVincoli.getNumGiorniPeriodo(), configVincoli.getMaxMinutiPeriodo());
+        Constraint vincolo5 = new ConstraintUbiquità();
+        Constraint vincolo6 = new ConstraintNumeroDiRuoloTurno();
 
-        Vincolo vincolo1 = new VincoloCategorieUtenteTurno();
-        Vincolo vincolo2 = new VincoloMaxPeriodoConsecutivo(configVincoli.getNumMaxMinutiConsecutiviPerTutti());
-        Vincolo vincolo4 = new VincoloMaxOrePeriodo(configVincoli.getNumGiorniPeriodo(), configVincoli.getMaxMinutiPeriodo());
-        Vincolo vincolo5 = new VincoloUbiquità();
-        Vincolo vincolo6 = new VincoloNumeroDiRuoloTurno();
+        //vincolo1.setViolable(true);
 
-        vincoloTurniContigui.setViolabile(true);
-        vincolo1.setViolabile(true);
-
-        for(ConfigVincoloMaxPeriodoConsecutivo config : configVincoli.getConfigVincoloMaxPeriodoConsecutivoPerCategoria()){
-            Vincolo vincolo = new VincoloMaxPeriodoConsecutivo(config.getNumMaxMinutiConsecutivi(), config.getCategoriaVincolata());
-            vincolo.setDescrizione("Vincolo massimo periodo consecutivo per categoria "+config.getCategoriaVincolata().getNome());
-            vincoloDao.saveAndFlush(vincolo);
+        for(ConfigVincMaxPerCons config : configVincoli.getConfigVincMaxPerConsPerCategoria()){
+            Constraint vincolo = new ConstraintMaxPeriodoConsecutivo(config.getNumMaxMinutiConsecutivi(), config.getCategoriaVincolata());
+            vincolo.setDescription("Constraint massimo periodo consecutivo per categoria "+config.getCategoriaVincolata().getType());
+            constraintDAO.saveAndFlush(vincolo);
         }
-        vincolo1.setDescrizione("Vincolo Turno Persona: verifica che una determinata categoria non venga associata ad un turno proibito.");
-        vincolo2.setDescrizione("Vincolo massimo periodo consecutivo. Verifica che un medico non lavori più di tot ore consecutive in una giornata.");
-        vincolo4.setDescrizione("Vincolo massimo ore lavorative in un certo intervallo di tempo. Verifica che un medico non lavori più di tot ore in un arco temporale configurabile.");
-        vincolo5.setDescrizione("Vincolo ubiquità. Verifica che lo stesso medico non venga assegnato contemporaneamente a due turni diversi nello stesso giorno");
-        vincoloTurniContigui.setDescrizione("Vincolo turni contigui. Verifica se alcune tipologie possono essere assegnate in modo contiguo.");
-        vincolo6.setDescrizione("Vincolo numero utenti per ruolo. Definisce quanti utenti di ogni ruolo devono essere associati ad ogni turno");
+        //vincolo1.setDescription("Constraint Shift Persona: verifica che una determinata categoria non venga associata ad un turno proibito.");
+        vincolo2.setDescription("Constraint massimo periodo consecutivo. Verifica che un medico non lavori più di tot ore consecutive in una giornata.");
+        vincolo4.setDescription("Constraint massimo ore lavorative in un certo intervallo di tempo. Verifica che un medico non lavori più di tot ore in un arco temporale configurabile.");
+        vincolo5.setDescription("Constraint ubiquità. Verifica che lo stesso medico non venga assegnato contemporaneamente a due turni diversi nello stesso giorno");
+        vincoloTurniContigui.setDescription("Constraint turni contigui. Verifica se alcune tipologie possono essere assegnate in modo contiguo.");
+        vincolo6.setDescription("Constraint numero utenti per ruolo. Definisce quanti utenti di ogni ruolo devono essere associati ad ogni turno");
 
-        vincoloDao.saveAndFlush(vincoloTurniContigui);
-        vincoloDao.saveAndFlush(vincolo1);
-        vincoloDao.saveAndFlush(vincolo2);
-        vincoloDao.saveAndFlush(vincolo4);
-        vincoloDao.saveAndFlush(vincolo5);
-        vincoloDao.saveAndFlush(vincolo6);
+        constraintDAO.saveAndFlush(vincoloTurniContigui);
+        //constraintDAO.saveAndFlush(vincolo1);
+        constraintDAO.saveAndFlush(vincolo2);
+        constraintDAO.saveAndFlush(vincolo4);
+        constraintDAO.saveAndFlush(vincolo5);
+        constraintDAO.saveAndFlush(vincolo6);
 
-        List<Vincolo> vincoli = vincoloDao.findByType("VincoloMaxPeriodoConsecutivo");
+        List<Constraint> vincoli = constraintDAO.findByType("ConstraintMaxPeriodoConsecutivo");
     }
 
 
-    private void populateDB() throws TurnoException {
+    private void populateDB() throws ShiftException {
 
         //CREA LE CATEGORIE DI TIPO STATO (ESCLUSIVE PER I TURNI)
-        Categoria categoriaOVER62 = new Categoria("OVER_62", TipoCategoriaEnum.STATO);
-        Categoria categoriaIncinta = new Categoria("INCINTA", TipoCategoriaEnum.STATO);
-        Categoria categoriaFerie = new Categoria("IN_FERIE", TipoCategoriaEnum.STATO);
-        Categoria categoriaMalattia = new Categoria("IN_MALATTIA", TipoCategoriaEnum.STATO);
+        // Condition may be structure specific TODO: Ask if it is needed a configuration file for that
+        PermanentCondition over62 = new PermanentCondition("OVER_62");
+        TemporaryCondition pregnant = new TemporaryCondition("INCINTA", LocalDate.now().toEpochDay(), LocalDate.now().plusMonths(9).toEpochDay());
+        TemporaryCondition maternity = new TemporaryCondition("IN_MATERNITA'", LocalDate.now().toEpochDay(), LocalDate.now().plusDays(60).toEpochDay());
+        TemporaryCondition vacation = new TemporaryCondition("IN_FERIE", LocalDate.now().toEpochDay(), LocalDate.now().plusDays(7).toEpochDay());
+        TemporaryCondition sick = new TemporaryCondition("IN_MALATTIA", LocalDate.now().toEpochDay(), LocalDate.now().plusDays(7).toEpochDay());
+
 
         //CREA LE CATEGORIE DI TIPO SPECIALIZZAZIONE (INCLUSIVE)
-        Categoria cardiologia = new Categoria("CARDIOLOGIA", TipoCategoriaEnum.SPECIALIZZAZIONE);
-        Categoria oncologia = new Categoria("ONCOLOGIA", TipoCategoriaEnum.SPECIALIZZAZIONE);
+        Specialization cardiologia = new Specialization("CARDIOLOGIA");
+        Specialization oncologia = new Specialization("ONCOLOGIA");
 
-        //CREA LA CATEGORIE DI TIPO TURNAZIONE (INCLUSIVE)
-        Categoria reparto_cardiologia = new Categoria("REPARTO CARDIOLOGIA", TipoCategoriaEnum.TURNAZIONE);
-        Categoria reparto_oncologia = new Categoria("REPARTO ONCOLOGIA", TipoCategoriaEnum.TURNAZIONE);
-        Categoria ambulatorio_cardiologia = new Categoria("AMBULATORIO CARDIOLOGIA", TipoCategoriaEnum.TURNAZIONE);
-        Categoria ambulatorio_oncologia = new Categoria("AMBULATORIO ONCOLOGIA", TipoCategoriaEnum.TURNAZIONE);
-
-        categoriaDao.save(categoriaFerie);
-        categoriaDao.save(categoriaOVER62);
-        categoriaDao.save(categoriaIncinta);
-        categoriaDao.save(categoriaMalattia);
-        categoriaDao.save(cardiologia);
-        categoriaDao.save(oncologia);
-        categoriaDao.save(reparto_cardiologia);
-        categoriaDao.save(reparto_oncologia);
-        categoriaDao.save(ambulatorio_cardiologia);
-        categoriaDao.save(ambulatorio_oncologia);
+        Task ward = new Task(TaskEnum.WARD);
+        Task clinic = new Task(TaskEnum.CLINIC);
+        Task emergency = new Task(TaskEnum.EMERGENCY);
+        Task operatingRoom = new Task(TaskEnum.OPERATING_ROOM);
 
 
-        //Creo categorie stato per un utente specifico
-        CategoriaUtente categoriaOver62 = new CategoriaUtente(categoriaOVER62,LocalDate.of(2022,3,7), LocalDate.now().plusDays(1000));
-        categoriaUtenteDao.save(categoriaOver62);
-        CategoriaUtente ferie = new CategoriaUtente(categoriaFerie,LocalDate.now().minusDays(70), LocalDate.now().plusDays(7));
-        categoriaUtenteDao.save(ferie);
-        CategoriaUtente cardiologo = new CategoriaUtente(cardiologia,LocalDate.now().minusDays(70), LocalDate.now().plusDays(10000));
-        categoriaUtenteDao.save(cardiologo);
-        CategoriaUtente oncologo = new CategoriaUtente(oncologia,LocalDate.now().minusDays(70), LocalDate.now().plusDays(10000));
-        categoriaUtenteDao.save(oncologo);
+        // Load services offered by the wards
+        MedicalService repartoCardiologia = new MedicalService(Collections.singletonList(ward), "CARDIOLOGIA");
+        MedicalService ambulatorioCardiologia = new MedicalService(Collections.singletonList(clinic), "CARDIOLOGIA");
+        MedicalService guardiaCardiologia = new MedicalService(Collections.singletonList(emergency), "CARDIOLOGIA");
+        MedicalService salaOperatoriaCardiologia = new MedicalService(Collections.singletonList(operatingRoom), "CARDIOLOGIA");
+        MedicalService ambulatorioOncologia = new MedicalService(Collections.singletonList(clinic), "ONCOLOGIA");
+
+        // Save in persistence all possible conditions
+        temporaryConditionDAO.save(vacation);
+        temporaryConditionDAO.save(pregnant);
+        temporaryConditionDAO.save(sick);
+        temporaryConditionDAO.save(maternity);
+
+        permanentConditionDAO.save(over62);
+
+        // Save in persistence all possible specialization
+        specializationDAO.save(cardiologia);
+        specializationDAO.save(oncologia);
+
+        taskDAO.save(clinic);
+        taskDAO.save(emergency);
+        taskDAO.save(operatingRoom);
+        taskDAO.save(ward);
 
 
-        CategoriaUtente repartoCardiologia = new CategoriaUtente(reparto_cardiologia, LocalDate.now().minusMonths(2),LocalDate.now().plusMonths(2));
-        categoriaUtenteDao.save(repartoCardiologia);
-        CategoriaUtente ambulatorioCardiologia = new CategoriaUtente(ambulatorio_cardiologia, LocalDate.now().minusMonths(2),LocalDate.now().plusMonths(2));
-        categoriaUtenteDao.save(ambulatorioCardiologia);
-        CategoriaUtente repartoOncologia = new CategoriaUtente(reparto_oncologia, LocalDate.now().minusMonths(2),LocalDate.now().plusMonths(2));
-        categoriaUtenteDao.save(repartoOncologia);
-        CategoriaUtente ambulatorioOncologia = new CategoriaUtente(ambulatorio_oncologia, LocalDate.now().minusMonths(2),LocalDate.now().plusMonths(2));
-        categoriaUtenteDao.save(ambulatorioOncologia);
-
+        // Save in persistence all possible rotations
+        medicalServiceDAO.save(repartoCardiologia);
+        medicalServiceDAO.save(ambulatorioCardiologia);
+        medicalServiceDAO.save(guardiaCardiologia);
+        medicalServiceDAO.save(salaOperatoriaCardiologia);
+        medicalServiceDAO.save(ambulatorioOncologia);
 
 
         //Creo utenti
-        Utente u6 = new Utente("Giovanni","Cantone", "GVNCTN48M22D429*", LocalDate.of(1960, 3, 7),"giovannicantone@gmail.com", "passw", RuoloEnum.STRUTTURATO , AttoreEnum.PIANIFICATORE);
-        u6.getStato().add(categoriaOver62);
-        u6.getStato().add(ferie);
-        // Aggiungo la specializzazione
-        u6.getSpecializzazioni().add(cardiologo);
-        Utente u1 = new Utente("Martina","Salvati", "SLVMTN97T56H501*", LocalDate.of(1997, 3, 14),"salvatimartina97@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.CONFIGURATORE);
-        u1.getTurnazioni().add(repartoCardiologia);
-        Utente u2 = new Utente("Domenico","Verde", "VRDDMC96H16H501*", LocalDate.of(1997, 5, 23),"domenicoverde@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u2.getTurnazioni().add(repartoCardiologia);
-        Utente u3 = new Utente("Federica","Villani", "VLNFDR98P03H501*", LocalDate.of(1998, 2, 12),"federicavillani@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        //u3.getTurnazioni().add(repartoCardiologia);
-        Utente u4 = new Utente("Daniele","Colavecchi", "CLVDNL82C21H501*", LocalDate.of(1982, 7, 6),"danielecolavecchi@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u4.getSpecializzazioni().add(cardiologo);
-        Utente u5 = new Utente("Daniele","La Prova", "LPVDNL98R27H501*", LocalDate.of(1998, 2, 12),"danielelaprova@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u5.getSpecializzazioni().add(oncologo);
-        Utente u7 = new Utente("Luca","Fiscariello", "FSCLCU98L07B581*", LocalDate.of(1998, 8, 12),"lucafiscariello@gmail.com", "passw",RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u7.getSpecializzazioni().add(oncologo);
-        Utente u8 = new Utente("Manuel","Mastrofini", "MSTMNL80M20H501*", LocalDate.of(1988, 5, 4),"manuelmastrofini@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u8.getSpecializzazioni().add(cardiologo);
-        Utente u9 = new Utente("Giulia","Cantone", "CTNGLI78E44H501*", LocalDate.of(1991, 2, 12),"giuliacantone@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u9.getTurnazioni().add(repartoOncologia);
-        Utente u10 = new Utente("Fabio","Valenzi", "VLZFBA90A03H501*", LocalDate.of(1989, 12, 6),"fabiovalenzi@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u10.getTurnazioni().add(repartoOncologia);
-        Utente u11 = new Utente("Giada","Rossi", "RSSGDI92H68H501*", LocalDate.of(1997, 3, 14),"giada.rossi@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO ,AttoreEnum.UTENTE);
-        u11.getTurnazioni().add(repartoOncologia);
-        Utente u12 = new Utente("Camilla","Verdi", "VRDCML95B41H501*", LocalDate.of(1997, 5, 23),"camilla.verdi@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u12.getTurnazioni().add(repartoCardiologia);
-        Utente u13 = new Utente("Federica","Pollini", "PLLFDR94S70H501*", LocalDate.of(1998, 2, 12),"federica.pollini@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u13.getTurnazioni().add(repartoCardiologia);
-        Utente u14 = new Utente("Claudia","Rossi", "RSSCLD91C52H501*", LocalDate.of(1982, 7, 6),"claudia.rossi@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u14.getSpecializzazioni().add(oncologo);
-        Utente u15 = new Utente("Giorgio","Bianchi", "BNCGRG88E21H501*", LocalDate.of(1993, 2, 12),"giorgio.bianchi@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u15.getSpecializzazioni().add(oncologo);
-        Utente u16 = new Utente("Claudio","Gialli", "GLLCLD89B14H501*", LocalDate.of(1998, 8, 12),"claudia.gialli@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u16.getSpecializzazioni().add(cardiologo);
-        Utente u17 = new Utente("Filippo","Neri", "NREFLP92R24H501*", LocalDate.of(1998, 2, 12),"filippo.neru@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u17.getTurnazioni().add(ambulatorioCardiologia);
-        Utente u18 = new Utente("Vincenzo","Grassi", "GRSVNC60A19H501*", LocalDate.of(1998, 8, 12),"vincenzo.grassi@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u18.getSpecializzazioni().add(oncologo);
-        Utente u19 = new Utente("Diana","Pasquali", "PSQDNI97D22H501*", LocalDate.of(1998, 2, 12),"diana.pasquali@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u19.getTurnazioni().add(ambulatorioCardiologia);
-        Utente u20 = new Utente("Francesco","Lo Presti", "LPSFRC66T05G071*", LocalDate.of(1998, 8, 12),"francesco.lopresti@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u20.getTurnazioni().add(ambulatorioOncologia);
-        Utente u21 = new Utente("Andrea","Pepe", "PPENDR99M05I150*", LocalDate.of(1998, 8, 12),"andrea.pepe@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u21.getTurnazioni().add(ambulatorioOncologia);
-        Utente u22 = new Utente("Matteo","Fanfarillo", "FNFMTT99E10A123E", LocalDate.of(1999, 9, 10),"matteo.fanfarillo99@gmail.com","passw", RuoloEnum.STRUTTURATO,AttoreEnum.PIANIFICATORE);
-        u22.getTurnazioni().add(repartoOncologia);
-        Utente u23 = new Utente("Matteo","Ciccaglione", "CCCMTT99H15C439*", LocalDate.of(1998, 8, 12),"matteo.ciccaglione@gmail.com","passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u23.getTurnazioni().add(repartoOncologia);
-        Utente u24 = new Utente("Vittoria","De Nitto", "DNTVTT60C59E612*", LocalDate.of(1998, 8, 12),"vittoria.denitto@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u24.getSpecializzazioni().add(oncologo);
-        Utente u25 = new Utente("Valeria","Cardellini", "CRDVLR68L44H501*", LocalDate.of(1998, 8, 12),"valeria.cardellini@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u25.getSpecializzazioni().add(oncologo);
-        Utente u26 = new Utente("Roberto","Monte", "MNTRBT69R01D666*", LocalDate.of(1998, 8, 12),"roberto.monte@gmail.com","passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u26.getSpecializzazioni().add(cardiologo);
-        Utente u27 = new Utente("Giovanni","Saggio", "SGGGVN65D30H501*", LocalDate.of(1998, 8, 12),"giovanni.saggio@gmail.com", "passw", RuoloEnum.STRUTTURATO,AttoreEnum.UTENTE);
-        u27.getSpecializzazioni().add(cardiologo);
-        Utente u28 = new Utente("Livia","Simoncini", "SMNLVI98L17H501*", LocalDate.of(1998, 8, 12),"livia.simoncini@gmail.com","passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u28.getTurnazioni().add(repartoCardiologia);
-        Utente u29 = new Utente("Ludovico","Zarrelli", "ZRRLDV99E03I370*", LocalDate.of(1998, 8, 12),"ludovico.zerrelli@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u29.getTurnazioni().add(repartoCardiologia);
-        Utente u30 = new Utente("Alessandro","Montenegro", "MNTLSS96P20H501*", LocalDate.of(1998, 8, 12),"alessandro.montenegro@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u30.getTurnazioni().add(ambulatorioOncologia);
-        Utente u31 = new Utente("Daniel","Lungu", "LNGDNL98T04H501*", LocalDate.of(1998, 8, 12),"daniel.lungu@gmail.com","passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u31.getTurnazioni().add(repartoCardiologia);
-        Utente u32 = new Utente("Andrea","Tosti", "TSTNDR97A10H501*", LocalDate.of(1998, 8, 12),"andrea.tosti@gmail.com","passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u32.getTurnazioni().add(repartoCardiologia);
-        Utente u33 = new Utente("Giorgio","Pesce", "PSCGRG98E08H501*", LocalDate.of(1998, 8, 12),"giorgia.pesce@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u33.getTurnazioni().add(repartoOncologia);
-        Utente u34 = new Utente("Valerio","Palmerini", "PLMVLR93B12H501*", LocalDate.of(1998, 8, 12),"valerio.palmerini@gmail.com", "passw", RuoloEnum.SPECIALIZZANDO,AttoreEnum.UTENTE);
-        u34.getTurnazioni().add(repartoOncologia);
+        UserController userController = new UserController();
+        TaskController taskController = new TaskController();
 
-        u6 = utenteDao.saveAndFlush(u6);
-        u7 = utenteDao.saveAndFlush(u7);
-        u1 = utenteDao.saveAndFlush(u1);
-        u2 = utenteDao.saveAndFlush(u2);
-        u3 = utenteDao.saveAndFlush(u3);
-        u4 = utenteDao.saveAndFlush(u4);
-        u5 = utenteDao.saveAndFlush(u5);
-        u8 = utenteDao.saveAndFlush(u8);
-        u9 = utenteDao.saveAndFlush(u9);
-        u10 = utenteDao.saveAndFlush(u10);
-        u11 = utenteDao.saveAndFlush(u11);
-        u12 = utenteDao.saveAndFlush(u12);
-        u13 = utenteDao.saveAndFlush(u13);
-        u14 = utenteDao.saveAndFlush(u14);
-        u15 = utenteDao.saveAndFlush(u15);
-        u16 = utenteDao.saveAndFlush(u16);
-        u17 = utenteDao.saveAndFlush(u17);
-        u18 = utenteDao.saveAndFlush(u18);
-        u19 = utenteDao.saveAndFlush(u19);
-        u20 = utenteDao.saveAndFlush(u20);
-        u21 = utenteDao.saveAndFlush(u21);
-        u22 = utenteDao.saveAndFlush(u22);
-        u23 = utenteDao.saveAndFlush(u23);
-        u24 = utenteDao.saveAndFlush(u24);
-        u25 = utenteDao.saveAndFlush(u25);
-        u26 = utenteDao.saveAndFlush(u26);
-        u27 = utenteDao.saveAndFlush(u27);
-        u28 = utenteDao.saveAndFlush(u28);
-        u29 = utenteDao.saveAndFlush(u29);
-        u30 = utenteDao.saveAndFlush(u30);
-        u31 = utenteDao.saveAndFlush(u31);
-        u32 = utenteDao.saveAndFlush(u32);
-        u33 = utenteDao.saveAndFlush(u33);
-        u34 = utenteDao.saveAndFlush(u34);
+        Doctor u6 = new Doctor("Giovanni", "Cantone", "GVNCTN48M22D429G", LocalDate.of(1960, 3, 7), "giovannicantone@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.PLANNER));
+        try {
+            userController.addCondition(u6, over62);
+            userController.addCondition(u6, vacation);
+            userController.addSpecialization(u6, cardiologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+
+        Doctor u1 = new Doctor("Martina", "Salvati", "SLVMTN97T56H501Y", LocalDate.of(1997, 3, 14), "salvatimartina97@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.CONFIGURATOR));
+        try {
+            userController.addCondition(u6, over62);
+            taskController.addService(repartoCardiologia, u6);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
 
 
-        //creo servizi
-        Servizio servizio1 = new Servizio("cardiologia");
-        Servizio servizio2 = new Servizio("oncologia");
+        Doctor u2 = new Doctor("Domenico", "Verde", "VRDDMC96H16H501H", LocalDate.of(1997, 5, 23), "domenicoverde@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(repartoCardiologia, u2);
+        Doctor u3 = new Doctor("Federica", "Villani", "VLNFDR98P43H501D", LocalDate.of(1998, 9, 3), "federicavillani@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(repartoCardiologia, u3);
+        Doctor u4 = new Doctor("Daniele", "Colavecchi", "CLVDNL82C21H501E", LocalDate.of(1982, 7, 6), "danielecolavecchi@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u4, cardiologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u5 = new Doctor("Daniele", "La Prova", "LPVDNL98R27H501J", LocalDate.of(1998, 2, 12), "danielelaprova@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u5, oncologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u7 = new Doctor("Luca", "Fiscariello", "FSCLCU98L07B581O", LocalDate.of(1998, 8, 12), "lucafiscariello@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u7, oncologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u8 = new Doctor("Manuel", "Mastrofini", "MSTMNL80M20H501X", LocalDate.of(1988, 5, 4), "manuelmastrofini@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u8, cardiologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u9 = new Doctor("Giulia", "Cantone", "CTNGLI78E44H501Z", LocalDate.of(1991, 2, 12), "giuliacantone@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(repartoCardiologia, u9);
+        Doctor u10 = new Doctor("Fabio", "Valenzi", "VLZFBA90A03H501U", LocalDate.of(1989, 12, 6), "fabiovalenzi@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(repartoCardiologia, u10);
+        Doctor u11 = new Doctor("Giada", "Rossi", "RSSGDI92H68H501O", LocalDate.of(1997, 3, 14), "giada.rossi@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(ambulatorioOncologia, u11);
+        Doctor u12 = new Doctor("Camilla", "Verdi", "VRDCML95B41H501L", LocalDate.of(1997, 5, 23), "camilla.verdi@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(ambulatorioCardiologia, u12);
+        Doctor u13 = new Doctor("Federica", "Pollini", "PLLFDR94S70H501I", LocalDate.of(1998, 2, 12), "federica.pollini@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(ambulatorioCardiologia, u13);
+        Doctor u14 = new Doctor("Claudia", "Rossi", "RSSCLD91C52H501A", LocalDate.of(1982, 7, 6), "claudia.rossi@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u14, oncologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u15 = new Doctor("Giorgio", "Bianchi", "BNCGRG88E21H501S", LocalDate.of(1993, 2, 12), "giorgio.bianchi@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u15, oncologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u16 = new Doctor("Claudio", "Gialli", "GLLCLD89B14H501T", LocalDate.of(1998, 8, 12), "claudia.gialli@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u16, cardiologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u17 = new Doctor("Filippo", "Neri", "NREFLP92R24H501C", LocalDate.of(1998, 2, 12), "filippo.neru@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(ambulatorioCardiologia, u17);
+        Doctor u18 = new Doctor("Vincenzo", "Grassi", "GRSVNC60A19H501P", LocalDate.of(1998, 8, 12), "vincenzo.grassi@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u18, oncologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u19 = new Doctor("Diana", "Pasquali", "PSQDNI97D22H501Q", LocalDate.of(1997, 4, 22), "diana.pasquali@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(ambulatorioCardiologia, u19);
+        Doctor u20 = new Doctor("Francesco", "Lo Presti", "LPSFRC66T05G071E", LocalDate.of(1998, 8, 12), "francesco.lopresti@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        taskController.addService(ambulatorioOncologia, u20);
+        Doctor u21 = new Doctor("Andrea", "Pepe", "PPENDR99M05I150J", LocalDate.of(1999, 8, 5), "andrea.pepe@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(ambulatorioOncologia, u21);
+        Doctor u22 = new Doctor("Matteo", "Fanfarillo", "FNFMTT99E10A123E", LocalDate.of(1999, 5, 10), "matteo.fanfarillo99@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.PLANNER));
+        taskController.addService(ambulatorioOncologia, u22);
+        Doctor u23 = new Doctor("Matteo", "Ciccaglione", "CCCMTT99H15C439X", LocalDate.of(1998, 6, 15), "matteo.ciccaglione@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(ambulatorioOncologia, u23);
+        Doctor u24 = new Doctor("Vittoria", "De Nitto", "DNTVTT60C59E612D", LocalDate.of(1998, 8, 12), "vittoria.denitto@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u24, oncologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u25 = new Doctor("Valeria", "Cardellini", "CRDVLR68L44H501B", LocalDate.of(1998, 8, 12), "valeria.cardellini@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u25, oncologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u26 = new Doctor("Roberto", "Monte", "MNTRBT69R01D666W", LocalDate.of(1998, 8, 12), "roberto.monte@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u26, oncologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u27 = new Doctor("Giovanni", "Saggio", "SGGGVN65D30H501J", LocalDate.of(1998, 8, 12), "giovanni.saggio@gmail.com", "passw", Seniority.STRUCTURED, List.of(SystemActor.DOCTOR));
+        try {
+            userController.addSpecialization(u27, oncologia);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Doctor u28 = new Doctor("Livia", "Simoncini", "SMNLVI98L17H501O", LocalDate.of(1998, 7, 19), "livia.simoncini@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(salaOperatoriaCardiologia, u28);
+        Doctor u29 = new Doctor("Ludovico", "Zarrelli", "ZRRLDV99E03I370A", LocalDate.of(1998, 5, 3), "ludovico.zerrelli@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(salaOperatoriaCardiologia, u29);
+        Doctor u30 = new Doctor("Alessandro", "Montenegro", "MNTLSS96P20H501J", LocalDate.of(1998, 8, 12), "alessandro.montenegro@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(salaOperatoriaCardiologia, u30);
+        Doctor u31 = new Doctor("Daniel", "Lungu", "LNGDNL98T04H501I", LocalDate.of(1998, 12, 4), "daniel.lungu@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(salaOperatoriaCardiologia, u31);
+        Doctor u32 = new Doctor("Andrea", "Tosti", "TSTNDR97A10H501E", LocalDate.of(1998, 8, 12), "andrea.tosti@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(guardiaCardiologia, u32);
+        Doctor u33 = new Doctor("Giorgio", "Pesce", "PSCGRG98E08H501T", LocalDate.of(1998, 8, 12), "giorgia.pesce@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(guardiaCardiologia, u33);
+        Doctor u34 = new Doctor("Valerio", "Palmerini", "PLMVLR93B12H501U", LocalDate.of(1998, 8, 12), "valerio.palmerini@gmail.com", "passw", Seniority.SPECIALIST, List.of(SystemActor.DOCTOR));
+        taskController.addService(guardiaCardiologia, u34);
+
+        u6 = doctorDAO.saveAndFlush(u6);
+        u7 = doctorDAO.saveAndFlush(u7);
+        u1 = doctorDAO.saveAndFlush(u1);
+        u2 = doctorDAO.saveAndFlush(u2);
+        u3 = doctorDAO.saveAndFlush(u3);
+        u4 = doctorDAO.saveAndFlush(u4);
+        u5 = doctorDAO.saveAndFlush(u5);
+        u8 = doctorDAO.saveAndFlush(u8);
+        u9 = doctorDAO.saveAndFlush(u9);
+        u10 = doctorDAO.saveAndFlush(u10);
+        u11 = doctorDAO.saveAndFlush(u11);
+        u12 = doctorDAO.saveAndFlush(u12);
+        u13 = doctorDAO.saveAndFlush(u13);
+        u14 = doctorDAO.saveAndFlush(u14);
+        u15 = doctorDAO.saveAndFlush(u15);
+        u16 = doctorDAO.saveAndFlush(u16);
+        u17 = doctorDAO.saveAndFlush(u17);
+        u18 = doctorDAO.saveAndFlush(u18);
+        u19 = doctorDAO.saveAndFlush(u19);
+        u20 = doctorDAO.saveAndFlush(u20);
+        u21 = doctorDAO.saveAndFlush(u21);
+        u22 = doctorDAO.saveAndFlush(u22);
+        u23 = doctorDAO.saveAndFlush(u23);
+        u24 = doctorDAO.saveAndFlush(u24);
+        u25 = doctorDAO.saveAndFlush(u25);
+        u26 = doctorDAO.saveAndFlush(u26);
+        u27 = doctorDAO.saveAndFlush(u27);
+        u28 = doctorDAO.saveAndFlush(u28);
+        u29 = doctorDAO.saveAndFlush(u29);
+        u30 = doctorDAO.saveAndFlush(u30);
+        u31 = doctorDAO.saveAndFlush(u31);
+        u32 = doctorDAO.saveAndFlush(u32);
+        u33 = doctorDAO.saveAndFlush(u33);
+        u34 = doctorDAO.saveAndFlush(u34);
+
+        HashMap<Seniority, Integer> doctorsNumberBySeniority = new HashMap<>();
+        doctorsNumberBySeniority.put(Seniority.STRUCTURED, 1);
+        doctorsNumberBySeniority.put(Seniority.SPECIALIST, 2);
+
+        Set<DayOfWeek> allDaysOfWeek = new HashSet<>();
+        allDaysOfWeek.add(DayOfWeek.MONDAY);
+        allDaysOfWeek.add(DayOfWeek.TUESDAY);
+        allDaysOfWeek.add(DayOfWeek.WEDNESDAY);
+        allDaysOfWeek.add(DayOfWeek.THURSDAY);
+        allDaysOfWeek.add(DayOfWeek.FRIDAY);
+        allDaysOfWeek.add(DayOfWeek.SATURDAY);
+        allDaysOfWeek.add(DayOfWeek.SUNDAY);
+
+        Shift shift1 = new Shift(LocalTime.of(14, 0),
+                Duration.ofHours(8),
+                ambulatorioCardiologia,
+                TimeSlot.AFTERNOON,
+                doctorsNumberBySeniority,
+                allDaysOfWeek,
+                Collections.emptyList());
 
 
-        servizio1.getMansioni().addAll(Arrays.asList(MansioneEnum.AMBULATORIO, MansioneEnum.REPARTO, MansioneEnum.GUARDIA, MansioneEnum.SALA_OPERATORIA));
-        servizio2.getMansioni().addAll(Arrays.asList(MansioneEnum.AMBULATORIO, MansioneEnum.REPARTO, MansioneEnum.GUARDIA, MansioneEnum.SALA_OPERATORIA));
+        shiftDAO.saveAndFlush(shift1);
+/*
 
-        servizioDao.save(servizio2);
-        servizioDao.save(servizio1);
 
-        Turno t1 = new Turno(LocalTime.of(14, 0), Duration.ofHours(8), servizio1, MansioneEnum.GUARDIA, TipologiaTurno.POMERIDIANO,true);
-        t1.setCategoryPolicies(Arrays.asList(
-                new UserCategoryPolicy(categoriaMalattia, t1, UserCategoryPolicyValue.EXCLUDE),
-                new UserCategoryPolicy(categoriaFerie, t1,  UserCategoryPolicyValue.EXCLUDE)
+        Shift t2 = new Shift(LocalTime.of(14, 0), Duration.ofHours(6), Collections.singletonList(repartoCardiologia1), TimeSlot.AFTERNOON, qssList, allDaysOfWeek, Collections.emptyList());
+
+        t2.setConditionPolicies(Arrays.asList(
+                new ConditionPolicy(null,sick, t2, UserCategoryPolicyValue.EXCLUDE),
+                new ConditionPolicy(null,vacation, t2,  UserCategoryPolicyValue.EXCLUDE)
         ));
 
-        Turno t2 = new Turno(LocalTime.of(14, 0), Duration.ofHours(6), servizio1, MansioneEnum.REPARTO, TipologiaTurno.POMERIDIANO,false);
-        t2.setCategoryPolicies(Arrays.asList(
-            new UserCategoryPolicy(categoriaMalattia, t2, UserCategoryPolicyValue.EXCLUDE),
-            new UserCategoryPolicy(categoriaFerie, t2,  UserCategoryPolicyValue.EXCLUDE),
-            new UserCategoryPolicy(reparto_cardiologia, t2, UserCategoryPolicyValue.INCLUDE)
+        t2.setRotationPolicies(List.of(
+                new RotationPolicy(repartoCardiologia, t2, UserCategoryPolicyValue.INCLUDE)
         ));
 
-        Turno t3 = new Turno(LocalTime.of(20, 0), Duration.ofHours(12), servizio1, MansioneEnum.REPARTO, TipologiaTurno.NOTTURNO,false);
-        t3.setCategoryPolicies(Arrays.asList(
-            new UserCategoryPolicy(categoriaMalattia, t3, UserCategoryPolicyValue.EXCLUDE),
-            new UserCategoryPolicy(categoriaFerie, t3,  UserCategoryPolicyValue.EXCLUDE),
-            new UserCategoryPolicy(categoriaIncinta, t3,  UserCategoryPolicyValue.EXCLUDE),
-            new UserCategoryPolicy(categoriaOVER62, t3,  UserCategoryPolicyValue.EXCLUDE),
-            new UserCategoryPolicy(reparto_cardiologia, t3, UserCategoryPolicyValue.INCLUDE)
+
+
+        Shift t3 = new Shift(LocalTime.of(20, 0), Duration.ofHours(12), Collections.singletonList(repartoCardiologia2), TimeSlot.NIGHT, qssList, allDaysOfWeek, Collections.emptyList());
+
+        t3.setConditionPolicies(Arrays.asList(
+                new ConditionPolicy(null,sick, t3, UserCategoryPolicyValue.EXCLUDE),
+                new ConditionPolicy(null,vacation, t3,  UserCategoryPolicyValue.EXCLUDE),
+                new ConditionPolicy(null,pregnant, t3,  UserCategoryPolicyValue.EXCLUDE),
+                new ConditionPolicy(over62, t3,  UserCategoryPolicyValue.EXCLUDE)
         ));
 
-        Turno t5 = new Turno(LocalTime.of(10, 0), Duration.ofHours(2), servizio1, MansioneEnum.AMBULATORIO,TipologiaTurno.MATTUTINO, false);
-        t5.setCategoryPolicies(Arrays.asList(
-            new UserCategoryPolicy(categoriaMalattia, t5, UserCategoryPolicyValue.EXCLUDE),
-            new UserCategoryPolicy(categoriaFerie, t5,  UserCategoryPolicyValue.EXCLUDE),
-            new UserCategoryPolicy(cardiologia, t5, UserCategoryPolicyValue.INCLUDE),
-            new UserCategoryPolicy(ambulatorio_cardiologia, t5, UserCategoryPolicyValue.INCLUDE)
+        t3.setRotationPolicies(List.of(
+                new RotationPolicy(repartoCardiologia, t3, UserCategoryPolicyValue.INCLUDE)
         ));
 
-        Turno t6 = new Turno(LocalTime.of(10, 0), Duration.ofHours(2), servizio2, MansioneEnum.AMBULATORIO, TipologiaTurno.MATTUTINO, false);
-        t6.setCategoryPolicies(Arrays.asList(
-                new UserCategoryPolicy(categoriaMalattia, t6, UserCategoryPolicyValue.EXCLUDE),
-                new UserCategoryPolicy(categoriaFerie, t6,  UserCategoryPolicyValue.EXCLUDE),
-                new UserCategoryPolicy(oncologia, t6, UserCategoryPolicyValue.INCLUDE),
-                new UserCategoryPolicy(ambulatorio_oncologia, t6, UserCategoryPolicyValue.INCLUDE)
+
+
+        Shift t5 = new Shift(LocalTime.of(10, 0), Duration.ofHours(2), Collections.singletonList(ambulatorioCardiologia), TimeSlot.MORNING, qssList, allDaysOfWeek, Collections.emptyList());
+
+        t5.setConditionPolicies(Arrays.asList(
+            new ConditionPolicy(null,sick, t5, UserCategoryPolicyValue.EXCLUDE),
+            new ConditionPolicy(null,vacation, t5,  UserCategoryPolicyValue.EXCLUDE)
         ));
+
+        t5.setSpecializationPolicies(List.of(
+                new SpecializationPolicy(cardiologia, t5, UserCategoryPolicyValue.INCLUDE)
+        ));
+
+        t5.setRotationPolicies(List.of(
+                new RotationPolicy(ambulatorioCardiologia, t5, UserCategoryPolicyValue.INCLUDE)
+        ));
+
+
+
+        Shift t6 = new Shift(LocalTime.of(10, 0), Duration.ofHours(2), Collections.singletonList(ambulatorioOncologia), TimeSlot.MORNING, qssList, allDaysOfWeek, Collections.emptyList());
+
+        t6.setConditionPolicies(Arrays.asList(
+                new ConditionPolicy(null,sick, t6, UserCategoryPolicyValue.EXCLUDE),
+                new ConditionPolicy(null,vacation, t6,  UserCategoryPolicyValue.EXCLUDE)
+        ));
+
+        t6.setSpecializationPolicies(List.of(
+                new SpecializationPolicy(oncologia, t6, UserCategoryPolicyValue.INCLUDE)
+        ));
+
+        t6.setRotationPolicies(List.of(
+                new RotationPolicy(ambulatorioOncologia, t6, UserCategoryPolicyValue.INCLUDE)
+        ));
+
+
 
         // Creazione del turno in sala operatoria in cardiologia ogni lunedì
-        Turno salaOpCardio = new Turno(LocalTime.of(10, 0), Duration.ofHours(13).plusMinutes(59), servizio1, MansioneEnum.SALA_OPERATORIA, TipologiaTurno.MATTUTINO, false);
-        GiorniDellaSettimanaBitMask bitmask= new GiorniDellaSettimanaBitMask();
-        bitmask.disableAllDays();
-        salaOpCardio.setGiorniDiValidità(bitmask.addDayOfWeek(DayOfWeek.MONDAY));
+        Shift salaOpCardio = new Shift(LocalTime.of(10, 0), Duration.ofHours(13).plusMinutes(59), Collections.singletonList(salaOperatoriaCardiologia), TimeSlot.MORNING, qssList, Collections.singletonList(DayOfWeek.MONDAY), Collections.emptyList());
 
         //Salvataggio dei Turni nel DB
         turnoDao.saveAndFlush(t1);
@@ -428,17 +541,19 @@ public class ApplicationStartup implements ApplicationListener<ApplicationReadyE
         turnoDao.saveAndFlush(t6);
         turnoDao.saveAndFlush(salaOpCardio);
 
-        Desiderata desiderata = new Desiderata(LocalDate.of(2023,3,12),new ArrayList<>(), u3);
-        u3.getDesiderataList().add(desiderata);
+        Preference preference = new Preference(LocalDate.of(2023,3,12),new ArrayList<>(), Collections.singletonList(u3));
+        u3.getPreferenceList().add(preference);
 
-        desiderataDao.save(desiderata);
-        utenteDao.saveAndFlush(u3);
+        desiderataDao.save(preference);
+        doctorDao.saveAndFlush(u3);
 
-
+*/
     }
 
 
-    /** Metodo che server per caricare le festività dell'anno 2023/2024*/
+    /**
+     * Metodo che server per caricare le festività dell'anno 2023/2024
+     */
     public void LoadHoliday() throws IOException {
         List<List<String>> data = new ArrayList<>();
         //String filePath = currPath+"\\src\\main\\resources\\holiday.csv";
@@ -449,29 +564,28 @@ public class ApplicationStartup implements ApplicationListener<ApplicationReadyE
         FileReader fr = new FileReader(filePath);
         BufferedReader br = new BufferedReader(fr);
         String line = br.readLine();
-        while(line != null)
-        {
+        while (line != null) {
             List<String> lineData = Arrays.asList(line.split(";"));//splitting lines
             data.add(lineData);
             line = br.readLine();
         }
-        for(List<String> list : data) {
+        for (List<String> list : data) {
             String HolidayData = Arrays.asList(list.get(0).split(";")).get(0);
             final String[] HolidayDataS = HolidayData.split("/");
             int year = Integer.parseInt(HolidayDataS[2].replaceAll("[^0-9]", ""));
             int month = Integer.parseInt(HolidayDataS[1].replaceAll("[^0-9]", ""));
             int day = Integer.parseInt(HolidayDataS[0].replaceAll("[^0-9]", ""));
-            String HolidayName= Arrays.asList(list.get(1).split(";")).get(0);
-            String HolidayLocation= Arrays.asList(list.get(2).split(";")).get(0);
-            String Holiday_Category= Arrays.asList(list.get(3).split(";")).get(0);
+            String HolidayName = Arrays.asList(list.get(1).split(";")).get(0);
+            String HolidayLocation = Arrays.asList(list.get(2).split(";")).get(0);
+            String Holiday_Category = Arrays.asList(list.get(3).split(";")).get(0);
             LocalDate Date = LocalDate.of(year, month, day);
-            holidayController.registerHolidayPeriod(new HolidayDTO(
+            /*holidayController.registerHolidayPeriod(new HolidayDTO(
                     HolidayName,
                     HolidayCategory.valueOf(Holiday_Category),
                     Date.toEpochDay(),
                     Date.toEpochDay(),
                     HolidayLocation
-            ));
+            ));*/
         }
         br.close();
     }
